Testcases/pos/test13.jl
function test(a::Integer)::Integer
    return a+1
end 

function main()


 end


 main()