Testcases/neg/test03.jl
# wrong variable type
function main()
b::String = "test"
a::Integer = "3"

end
main()
